<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="description_img_default">descripcion default</string>
    <string name="description_button_default">descripcion default</string>

    <string name="button_ingresar">Ingresar</string>
    <string name="button_camera">Camara</string>
    <string name="empty_list">No users</string>
</resources>